--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 								<img class="img-responsive about-img" src="images/anuj-kumar.png" alt="Anuj kumar">
 							</div>
 							<div class="item">
-								<img class="img-responsive about-img" src="images/anuj-kumar.png" alt="Anuj kumar">
+								<img class="img-responsive about-img" src="images/anuj-kumar2.png" alt="Anuj kumar">
 							</div>
 						</div>
 					</div>
