--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 								</div>
 								<p>A skilled and detail-oriented web developer with experience in designing, developing, and maintaining websites and web applications. Proficient in front-end and/or back-end development, with expertise in technologies like HTML, CSS, JavaScript, and frameworks such as React, Node.js. Adept at collaborating with cross-functional teams to deliver user-friendly and efficient web solutions that meet client needs. Committed to staying updated on emerging technologies to craft modern, responsive, and secure web experiences.</p>
 								<p class="colorlib-social-icons">
-									<a href="https://www.linkedin.com/in/anuj-adhana/"><i class="icon-linkedin4"></i></a>
-									<a href="https://www.facebook.com/anuj09091"><i class="icon-facebook4"></i></a> 
+									<a href="https://www.linkedin.com/in/anuj-adhana/"><i class="icon-linkedin"></i></a>&nbsp;
+									<a href="https://www.facebook.com/anuj09091"><i class="icon-facebook2"></i></a> 
 								</p>
 								<p><a href="mailto:anuj09091@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
 							</div>
