--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Anuj Kumar</title>
@@ -9,14 +10,14 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  
+
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -34,9 +35,10 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	 
-	</head>
-	<body>
+
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
@@ -82,7 +84,7 @@
 			</div> -->
 		</div>
 	</nav>
-	
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -126,12 +128,20 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>A skilled and detail-oriented web developer with experience in designing, developing, and maintaining websites and web applications. Proficient in front-end and/or back-end development, with expertise in technologies like HTML, CSS, JavaScript, and frameworks such as React, Node.js. Adept at collaborating with cross-functional teams to deliver user-friendly and efficient web solutions that meet client needs. Committed to staying updated on emerging technologies to craft modern, responsive, and secure web experiences.</p>
+								<p>A skilled and detail-oriented web developer with experience in designing, developing,
+									and maintaining websites and web applications. Proficient in front-end and/or
+									back-end development, with expertise in technologies like HTML, CSS, JavaScript, and
+									frameworks such as React, Node.js. Adept at collaborating with cross-functional
+									teams to deliver user-friendly and efficient web solutions that meet client needs.
+									Committed to staying updated on emerging technologies to craft modern, responsive,
+									and secure web experiences.</p>
 								<p class="colorlib-social-icons">
-									<a href="https://www.linkedin.com/in/anuj-adhana/"><i class="icon-linkedin"></i></a>&nbsp;
-									<a href="https://www.facebook.com/anuj09091"><i class="icon-facebook2"></i></a> 
+									<a href="https://www.linkedin.com/in/anuj-adhana/"><i
+											class="icon-linkedin"></i></a>&nbsp;
+									<a href="https://www.facebook.com/anuj09091"><i class="icon-facebook2"></i></a>
 								</p>
-								<p><a href="mailto:anuj09091@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="mailto:anuj09091@gmail.com" class="btn btn-primary btn-outline">Contact
+										Me!</a></p>
 							</div>
 						</div>
 					</div>
@@ -163,21 +173,20 @@
 										<div class="services animate-box">
 											<h3>1 - Front End Development</h3>
 											<ul>
-												<li>HTML / CSS/ JS</li> 
+												<li>HTML / CSS/ JS</li>
 												<li>WordPress</li>
 												<li>React JS</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Graphic Design</h3>
+											<h3>3 - Database Skills</h3>
 											<ul>
-												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+												<li>MySQL databases</li>
+												<li>MongoDB</li>
+												<li>Postgresql</li>
 											</ul>
 										</div>
-										
+
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
@@ -186,21 +195,23 @@
 												<li>Node JS</li>
 												<li>Laravel</li>
 												<li>Php</li>
-												 
+
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
+											<h3>4 - Other Key Skills</h3>
 											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>Github- Version Control</li>
+												<li>Deployment and Hosting</li>
+												<li>Security</li>
+
 											</ul>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
+							<div class="one-forth services-img"
+								style="background-image: url(images/services-img-1.jpg);">
 							</div>
 						</div>
 					</div>
@@ -229,68 +240,114 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="https://aeropaarth.com/" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Pursuing Best</h2>
+										<h2>Aeropaarth</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://aeropaarth.com/">View details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="https://www.surveyorsurvey.com/" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Coordinates</h2>
+										<h2>Surveyor Survey</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View Details</a></p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://www.surveyorsurvey.com/">View Details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a href="https://anibuilder.com/index.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Cristall</h2>
+										<h2>Anibuilder</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://anibuilder.com/index.html">View Details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+							<a href="https://www.kairospulse.com/" class="work-img" style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Black</h2>
+										<h2>Kairospulse</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://www.kairospulse.com/">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="https://godspeedxp.com/" class="work-img" style="background-image: url(images/work-4.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Godspeedxp</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://godspeedxp.com/">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="https://www.nbs4india.org/" class="work-img" style="background-image: url(images/work-4.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>NBS4INDIA</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://www.nbs4india.org/">View details</a></p>
 								</div>
 							</div>
 						</div>
@@ -323,7 +380,8 @@
 							<div class="col-md-12">
 								<div class="article">
 									<a href="blog.html" class="blog-img">
-										<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+										<img class="img-responsive" src="images/img-1.jpg"
+											alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
@@ -332,7 +390,8 @@
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
 										<h2><a href="blog.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<p>When she reached the first hills of the Italic Mountains, she had a last view
+											back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
 								</div>
 							</div>
@@ -342,7 +401,8 @@
 							<div class="col-md-12">
 								<div class="article">
 									<a href="blog.html" class="blog-img">
-										<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+										<img class="img-responsive" src="images/img-1.jpg"
+											alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
@@ -351,7 +411,8 @@
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
 										<h2><a href="blog.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<p>When she reached the first hills of the Italic Mountains, she had a last view
+											back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
 								</div>
 							</div>
@@ -361,7 +422,8 @@
 							<div class="col-md-12">
 								<div class="article">
 									<a href="blog.html" class="blog-img">
-										<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+										<img class="img-responsive" src="images/img-1.jpg"
+											alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
@@ -370,7 +432,8 @@
 									<div class="desc">
 										<span class="meta">15, Feb 2018</span>
 										<h2><a href="blog.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<p>When she reached the first hills of the Italic Mountains, she had a last view
+											back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
 								</div>
 							</div>
@@ -490,7 +553,7 @@
 								</div>
 							</div>
 						</div> -->
-						<!-- <div class="col-md-4 col-pb-sm">
+		<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Latest Blog</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
@@ -514,7 +577,7 @@
 								</div>
 							</div>
 						</div> -->
-						<!-- <div class="col-md-4 col-pb-sm">
+		<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
@@ -524,8 +587,8 @@
 								</div>
 							</div>
 						</div> -->
-					</div>
-					<!-- <div class="row">
+	</div>
+	<!-- <div class="row">
 						<div class="col-md-12 text-center">
 							<p>
 								&copy;Anuj Kumar
@@ -534,10 +597,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							</p>
 						</div>
 					</div> -->
-				</div>
-			</div>
-		</footer>-->
-	
+	</div>
+	</div>
+	</footer>-->
+
 	</div>
 
 	<!-- jQuery -->
@@ -557,6 +620,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
