--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="https://aeropaarth.com/" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="https://zich.app/" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Aeropaarth</h2>
+										<h2>ZICH</h2>
 									</div>
 								</div>
 							</a>
@@ -252,7 +252,26 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and
 										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
 										right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="https://aeropaarth.com/">View details</a></p>
+									<p class="read"><a href="https://zich.app/">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="https://c03.app/" class="work-img" style="background-image: url(images/work-1.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>C03</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://c03.app/">View details</a></p>
 								</div>
 							</div>
 						</div>
@@ -276,6 +295,26 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="https://aeropaarth.com/" class="work-img" style="background-image: url(images/work-1.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Aeropaarth</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://aeropaarth.com/">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="https://anibuilder.com/index.html" class="work-img" style="background-image: url(images/work-2.jpg);">
@@ -335,6 +374,25 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
+							<a href="https://zhphotographystudio.com/" class="work-img" style="background-image: url(images/work-4.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Zh Photography Studio</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://zhphotographystudio.com/">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
 							<a href="https://www.nbs4india.org/" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
@@ -348,6 +406,26 @@
 										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
 										right at the coast of the Semantics, a large language ocean.</p>
 									<p class="read"><a href="https://www.nbs4india.org/">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="https://thecinematicsocials.com/" class="work-img" style="background-image: url(images/work-4.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>The Cinematic Socials</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and
+										Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+										right at the coast of the Semantics, a large language ocean.</p>
+									<p class="read"><a href="https://thecinematicsocials.com/">View details</a></p>
 								</div>
 							</div>
 						</div>
