--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 										<p>At <strong>SurveyorSurvey</strong>, we believe that customer feedback is the cornerstone of exceptional service and lasting relationships. Our platform is designed to automatically deliver valuable customer insights directly to your front-line teams—Customer Service Representatives (CSRs), Sales, Marketing, and more—empowering them to take action where it matters most.</p>
 										 
 										<h3>Technical Implementation</h3>
-										<p>Here we developed a SurveyorSurvey front-end layout using <strong>HTML, CSS, JavaScript</strong> and after that generate a custom theme using a very popular <strong>CMS WordPress</strong> with the help of powerfull page builder <strong>Elementor Pro</strong> for enhanced design flexibility and scalability, and deployed it on <strong>WordPress.com hosting</strong> for reliable and optimized performance.</p>
+										<p><strong>SurveyorSurvey</strong> is developed using <strong>HTML, CSS, JavaScript</strong> and after that generate a custom theme using a very popular <strong>CMS WordPress</strong> with the help of powerfull page builder <strong>Elementor Pro</strong> for enhanced design flexibility and scalability, and deployed it on <strong>WordPress.com hosting</strong> for reliable and optimized performance.</p>
 									<p class="read"><a href="https://www.surveyorsurvey.com/">View Details</a></p>
 								</div>
 							</div>
