--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								</div>
 							</div>
 							<div class="one-forth services-img"
-								style="background-image: url(images/services-img-1.jpg);">
+								style="background-image: url(images/services-img-1.webp);">
 							</div>
 						</div>
 					</div>
