--- a/index.html
+++ b/index.html
@@ -180,12 +180,14 @@
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Database Skills</h3>
+											<h3>3 - Animation Library</h3>
 											<ul>
-												<li>MySQL databases</li>
-												<li>MongoDB</li>
-												<li>Postgresql</li>
+												<li>GSAP</li>
+												<li>AOS</li>
+												<li>Animate.css</li>
+
 											</ul>
+											
 										</div>
 
 									</div>
@@ -194,7 +196,7 @@
 											<h3>2 - Back end Developer</h3>
 											<ul>
 												<li>Node JS</li>
-												<li>Laravel</li>
+												<li>Wordpress</li>
 												<li>Php</li>
 
 											</ul>
@@ -204,7 +206,7 @@
 											<ul>
 												<li>Github- Version Control</li>
 												<li>Deployment and Hosting</li>
-												<li>Security</li>
+												<li>Figma</li>
 
 											</ul>
 										</div>
